--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -52,7 +52,7 @@
             <p id="nomeTimeSelecionado"><br><p>
         </div>
 
-        <svg></svg>
+        <svg id="grafico1"></svg>
 
         <svg id="grafico2"></svg>
 
