Adiciona tooltip acima do gráfico para dar feedback ao usuário.

--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -54,15 +54,18 @@
                 <p>Lorem ipsum dolor sit amet, consectetur Aenean dapibus citur elementum</p>
             </div>
 
-            <ul id="menuEscudos01" class="menuEscudos"></ul>
+            <div id="caixaEscudos">
+                <ul id="menuEscudos01" class="menuEscudos"></ul>
 
-            <ul id="menuEscudos02" class="menuEscudos"></ul>
-        
+                <ul id="menuEscudos02" class="menuEscudos"></ul>
+            </div>
+
         </div>
         
         <div id="legenda">
-            <p id="nomeTimeSelecionado"><br><p>
+            <p id="nomeTimeSelecionado">ATLETICOMG</p>
         </div>
+        <div class="arrow"></div>
 
         <svg id="grafico1"></svg>
 
