comecando a consertar o brush

--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -65,20 +65,17 @@
                 <ul id="menuEscudos02" class="menuEscudos"></ul>
             </div>
 
-            <!-- LEGENDA DO TIME SELECIONADO -->
-            <div id="legenda">
-                <p id="nomeTimeSelecionado">ATLETICOMG</p>
-            </div>
-            <div class="arrowTooltip"></div>
-
         </div>
-        
-        <!-- GRÁFICOS --> 
-        <svg id="grafico1"></svg>
 
-        <svg id="grafico2"></svg>
+        <!-- LEGENDA DO TIME SELECIONADO -->
+        <div id="legenda">
+            <p id="nomeTimeSelecionado">ATLETICOMG</p>
+        </div>
+        <div class="arrowTooltip"></div>
 
-        
+        <!-- GRÁFICO -->
+        <svg id="grafico"></svg>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
