--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -66,15 +66,22 @@
             </div>
 
         </div>
+        <div id="wrapper" style="text-align: center">
 
-        <!-- LEGENDA DO TIME SELECIONADO -->
-        <div id="legenda">
-            <p id="nomeTimeSelecionado">ATLETICOMG</p>
+            <div style="text-align: center">
+                <!-- LEGENDA DO TIME SELECIONADO -->
+                <div id="legenda" style="display: inline-block">
+                    <p id="nomeTimeSelecionado">ATLETICOMG</p>
+                    <div class="arrowTooltip"></div>
+
+                </div>
+            </div>
+
+            <!-- GRÁFICO -->
+            <svg id="grafico" style="display: inline-block;"></svg>
         </div>
-        <div class="arrowTooltip"></div>
 
-        <!-- GRÁFICO -->
-        <svg id="grafico"></svg>
+
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
