--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -50,7 +50,7 @@
             
             <!-- TITULO DA PÁGINA -->
             <div id="titulo">
-                <h1>HISTÓRIA DO BRASILEIRÃO</h1>
+                <h1>HISTÓRIA DO BRASILEIRÃO EM NÚMEROS</h1>
             </div>
             
             <!-- LINHA FINA DA PÁGINA -->
