--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -7,20 +7,45 @@
         <title>Brasileirão</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/fonts.css">
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
+
+
     </head>
 
     <body>
-
         <div id="loading">
           <img id="loading-image" src="img/preloader.gif" alt="Loading..." />
         </div>
 
         <div class="menu-wrap">
-            <h1>História do Brasileirão em números</h1>
+            <div class="imagem">
+            <a href="http://blog.estadaodados.com.br/" id="logo-menu" target="_blank">
+                <img width="120px" style="margin-left:5px, margin-top:5px" src="img/logo-estadao-dados.png">
+            </a>
+            </div>
+            <div class="titulo">
+                <span id="titulo">História do Brasileirão em números</span>
+            </div>
+
+            <div class="rede_social">
+                <ul class="share-buttons">
+                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fblog.estadaodados.com&t=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros" title="Share on Facebook" target="_blank"><img src="images/flat_web_icon_set/inverted/Facebook.png"></a></li>
+                    <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fblog.estadaodados.com&text=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros:%20http%3A%2F%2Fblog.estadaodados.com&via=estadaodados" target="_blank" title="Tweet"><img src="images/flat_web_icon_set/inverted/Twitter.png"></a></li>
+                    <li><a href="mailto:?subject=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros&body=Veja%20a%20hist%C3%B3ria%20de%20cada%20time%20que%20j%C3%A1%20disputou%20o%20Campeonato%20Brasileiro%20de%20Futebol%20em%20n%C3%BAmeros:%20http%3A%2F%2Fblog.estadaodados.com" target="_blank" title="Email"><img src="images/flat_web_icon_set/inverted/Email.png"></a></li>
+                </ul>
+            </div>
+
+            <div class="titulo">
+
+            </div>
+
 
         </div>
 
-        <div class="svgWrap">
+
+
+
+    <div class="svgWrap">
             
 
             <!-- LINHA FINA DA PÁGINA -->
