data normal aparecendo, time duplicado retirado e credito no lugar

--- a/visualizacao/index.html
+++ b/visualizacao/index.html
@@ -83,6 +83,12 @@
         </div>
 
 
+        <footer>
+            <hr>
+            <p><b>Guilherme Duarte, Rodrigo Burgarelli, José Roberto de Toledo e Yuri Alexsander</b></p>
+            <p><b>Estadão Dados</b> • Copyright © 2015 • <a href="https://creativecommons.org/licenses/by-sa/3.0/br/">Alguns direitos reservados (CC-By-SA)</a></p>
+        </footer>
+
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
