agora com tags de facebook e com a imagem

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
 <html>
 
     <head>
-        <title>Brasileirão</title>
+        <title>História do Brasileirão em Números - Estadão Dados</title>
+
+        <meta property="og:title" content="História do Brasileirão em Números" />
+        <meta property="og:site_name" content="Estadão Dados"/>
+        <meta property="og:url" content="http://estadaodados.com/brasileirao" />
+        <meta property="og:description" content="Veja a história de cada time que já disputou o Campeonato Brasileiro em uma linha do tempo inédita" />
+        <meta property="og:type" content="article" />
+        <meta property="og:locale" content="pt_BR" />
+        <meta property="article:author" content="Guilherme Duarte, Rodrigo Burgarelli e Yuri Alexsander" />
+        <meta property="article:publisher" content="https://estadaodados.com" />
+        <meta property="og:image" content="http://estadaodados.com/brasileirao/img/facebook.png" />
+
+
+
+
+
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/fonts.css">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
@@ -30,9 +45,9 @@
 
             <div class="rede_social">
                 <ul class="share-buttons">
-                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fblog.estadaodados.com&t=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros" title="Share on Facebook" target="_blank"><img src="images/flat_web_icon_set/inverted/Facebook.png"></a></li>
-                    <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fblog.estadaodados.com&text=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros:%20http%3A%2F%2Fblog.estadaodados.com&via=estadaodados" target="_blank" title="Tweet"><img src="images/flat_web_icon_set/inverted/Twitter.png"></a></li>
-                    <li><a href="mailto:?subject=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros&body=Veja%20a%20hist%C3%B3ria%20de%20cada%20time%20que%20j%C3%A1%20disputou%20o%20Campeonato%20Brasileiro%20de%20Futebol%20em%20n%C3%BAmeros:%20http%3A%2F%2Fblog.estadaodados.com" target="_blank" title="Email"><img src="images/flat_web_icon_set/inverted/Email.png"></a></li>
+                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Festadaodados.com%2Fbrasileirao&t=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros" title="Compartilhar no Facebook" target="_blank"><img src="images/flat_web_icon_set/inverted/Facebook.png"></a></li>
+                    <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Festadaodados.com%2Fbrasileirao&text=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros:%20http%3A%2F%2Festadaodados.com%2Fbrasileirao&via=estadaodados" target="_blank" title="Tweet"><img src="images/flat_web_icon_set/inverted/Twitter.png"></a></li>
+                    <li><a href="mailto:?subject=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros&body=Veja%20a%20hist%C3%B3ria%20de%20cada%20time%20que%20j%C3%A1%20disputou%20o%20Campeonato%20Brasileiro%20em%20uma%20linha%20do%20tempo%20in%C3%A9dita:%20http%3A%2F%2Festadaodados.com%2Fbrasileirao" target="_blank" title="Email"><img src="images/flat_web_icon_set/inverted/Email.png"></a></li>
                 </ul>
             </div>
 
@@ -99,8 +114,8 @@
         </footer>
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src="js/d3.min.js"></script>
+        <script src='js/jquery-2.1.4.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
         <!--<script type="text/javascript" src="js/d3.min.js"></script>-->
         <!--<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>-->
