melhorando as tags de fb

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <meta property="og:site_name" content="Estadão Dados"/>
         <meta property="og:url" content="http://estadaodados.com/brasileirao" />
         <meta property="og:description" content="Veja a história de cada time que já disputou o Campeonato Brasileiro em uma linha do tempo inédita" />
-        <meta property="og:type" content="article" />
         <meta property="og:locale" content="pt_BR" />
-        <meta property="article:author" content="Guilherme Duarte, Rodrigo Burgarelli e Yuri Alexsander" />
-        <meta property="article:publisher" content="https://estadaodados.com" />
+        <meta name="author" content="Guilherme Duarte, Rodrigo Burgarelli e Yuri Alexsander"> <!-- A pessoa responsável pelo desenvolvimento deste arquivo -->
+        <meta name="DC.creator " content="Guilherme Duarte, Rodrigo Burgarelli e Yuri Alexsander"> <!-- Desenvolvedor da página -->
+        <meta name="DC.creator.address" content="rodrigo.burgarelli1@gmail.com"> <!-- email do autor da página -->
         <meta property="og:image" content="http://estadaodados.com/brasileirao/img/facebook.png" />
 
 
-
+        <meta name="keywords" content="futebol, brasileirão, brasileirao, campeonato brasileiro, times, elo, história, jornalismo de dados, datajournalism">
 
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
