melhorando as tags de fb

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <meta property="og:title" content="História do Brasileirão em Números" />
         <meta property="og:site_name" content="Estadão Dados"/>
-        <meta property="og:url" content="http://estadaodados.com/brasileirao" />
+        <meta property="og:url" content="http://estadaodados.com/brasileirao/" />
         <meta property="og:description" content="Veja a história de cada time que já disputou o Campeonato Brasileiro em uma linha do tempo inédita" />
         <meta property="og:locale" content="pt_BR" />
         <meta name="author" content="Guilherme Duarte, Rodrigo Burgarelli e Yuri Alexsander"> <!-- A pessoa responsável pelo desenvolvimento deste arquivo -->
