mudando texto e colocando legenda no eixo y

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <option disabled="disabled">CLUBES</option>
                     <option class="select-dash" disabled="disabled">----</option>
                 </select>
-                ou clique nos escudos abaixo</p>
+                ou clique nos escudos para ver o desempenho da equipe no torneio ao longo dos anos</p>
 
             </div>
 
@@ -93,7 +93,7 @@
         </div>
 
         <div id="explicacao">
-            <p>O gráfico mostra qual foi a pontuação 'Elo' registrada por cada um dos times que disputou o Campeonato Brasileiro de 1971 até hoje após cada jogo disputado. Para entender como o Estadão Dados fez esse cálculo, clique <span id="clique_calculo">aqui</span>.</p>
+            <p>A pontuação no gráfico corresponde ao 'Elo', uma métrica criada pelo Estadão Dados para comparar as equipes ao longo do tempo com base nos resultados dos jogos do Campeonato Brasileiro desde 1971. Arraste nas alças do gráfico menor para ver um período específico com mais detalhes. Para entender o cálculo, clique <span id="clique_calculo">aqui</span>.</p>
         </div>
     <div id="calculo">
         <h1>Metodologia</h1>
