--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
             <div class="rede_social">
                 <ul class="share-buttons">
-                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Festadaodados.com%2Fbrasileirao&t=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros" title="Compartilhar no Facebook" target="_blank"><img src="images/flat_web_icon_set/inverted/Facebook.png"></a></li>
-                    <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Festadaodados.com%2Fbrasileirao&text=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros:%20http%3A%2F%2Festadaodados.com%2Fbrasileirao&via=estadaodados" target="_blank" title="Tweet"><img src="images/flat_web_icon_set/inverted/Twitter.png"></a></li>
-                    <li><a href="mailto:?subject=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros&body=Veja%20a%20hist%C3%B3ria%20de%20cada%20time%20que%20j%C3%A1%20disputou%20o%20Campeonato%20Brasileiro%20em%20uma%20linha%20do%20tempo%20in%C3%A9dita:%20http%3A%2F%2Festadaodados.com%2Fbrasileirao" target="_blank" title="Email"><img src="images/flat_web_icon_set/inverted/Email.png"></a></li>
+                    <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Festadaodados.com%2Fbrasileirao&t=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros" title="Compartilhar no Facebook" target="_blank"><img src="../impeachment/img/flat_web_icon_set/inverted/Facebook.png"></a></li>
+                    <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Festadaodados.com%2Fbrasileirao&text=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros:%20http%3A%2F%2Festadaodados.com%2Fbrasileirao&via=estadaodados" target="_blank" title="Tweet"><img src="../impeachment/img/flat_web_icon_set/inverted/Twitter.png"></a></li>
+                    <li><a href="mailto:?subject=Hist%C3%B3ria%20do%20Brasileir%C3%A3o%20em%20N%C3%BAmeros&body=Veja%20a%20hist%C3%B3ria%20de%20cada%20time%20que%20j%C3%A1%20disputou%20o%20Campeonato%20Brasileiro%20em%20uma%20linha%20do%20tempo%20in%C3%A9dita:%20http%3A%2F%2Festadaodados.com%2Fbrasileirao" target="_blank" title="Email"><img src="../impeachment/img/flat_web_icon_set/inverted/Email.png"></a></li>
                 </ul>
             </div>
 
